Fixed footer scrolling, now it is stuck to the bottom of the webpage. Added profile for user to set information

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-   background-color: rgba(0, 0, 0, 0.2);
+   background-color: #f2f2f2;
    height: 60px; /* Set the height of the footer */
    line-height: 60px; /* Align the text vertically in the middle of the footer */
    /* Add any other styles you want for the footer */
